THREESCALE-9884 - updates to address review comments and design PR 842
